--- a/seven/seven/seven.csproj
+++ b/seven/seven/seven.csproj
@@ -46,16 +46,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CarEdit.cs">
+    <Compile Include="delivery\CarEdit.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="CarEdit.Designer.cs">
+    <Compile Include="delivery\CarEdit.Designer.cs">
       <DependentUpon>CarEdit.cs</DependentUpon>
     </Compile>
-    <Compile Include="CarInfo.cs">
+    <Compile Include="delivery\CarInfo.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="CarInfo.Designer.cs">
+    <Compile Include="delivery\CarInfo.Designer.cs">
       <DependentUpon>CarInfo.cs</DependentUpon>
     </Compile>
     <Compile Include="delivery\CustomerEdit.cs">
@@ -100,24 +100,24 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="OrderEdit.cs">
+    <Compile Include="delivery\OrderEdit.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="OrderEdit.Designer.cs">
+    <Compile Include="delivery\OrderEdit.Designer.cs">
       <DependentUpon>OrderEdit.cs</DependentUpon>
     </Compile>
-    <Compile Include="OrderManagement.cs">
+    <Compile Include="delivery\OrderManagement.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="OrderManagement.Designer.cs">
+    <Compile Include="delivery\OrderManagement.Designer.cs">
       <DependentUpon>OrderManagement.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="CarEdit.resx">
+    <EmbeddedResource Include="delivery\CarEdit.resx">
       <DependentUpon>CarEdit.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="CarInfo.resx">
+    <EmbeddedResource Include="delivery\CarInfo.resx">
       <DependentUpon>CarInfo.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="delivery\CustomerEdit.resx">
@@ -138,10 +138,10 @@
     <EmbeddedResource Include="delivery\Menu.resx">
       <DependentUpon>Menu.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="OrderEdit.resx">
+    <EmbeddedResource Include="delivery\OrderEdit.resx">
       <DependentUpon>OrderEdit.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="OrderManagement.resx">
+    <EmbeddedResource Include="delivery\OrderManagement.resx">
       <DependentUpon>OrderManagement.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
