データベースの接続先の設定

--- a/seven/seven/App.config
+++ b/seven/seven/App.config
@@ -3,4 +3,9 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
     </startup>
+	<connectionStrings>
+		<add name="delivery_system" connectionString="Data Source=localhost;
+			                    Initial Catalog=delivery_system; Integrated Security=False; 
+								User ID=sa; Password=himitu;" />
+	</connectionStrings>
 </configuration>
